# xenon-support-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/plans/: 2026-01-28-menu-based-support-design.md  2026-01-28-menu-based-support-implementation.md
src/: admin_store.py  analytics.py  bot.py  config.py  database.py  main.py  server_config.py
src/agent/: client.py  runner.py  tools.py
src/docs/: scraper.py  search.py  store.py
src/views/: __init__.py  support_menu.py
